<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.cute.wallpaper.ringtones.presentation.main.MainFragment"
        android:label="@string/home_title" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.cute.wallpaper.ringtones.presentation.search.SearchFragment"
        android:label="@string/search_wallpapers">
        <argument
            android:name="search_mode"
            app:argType="string"
            android:defaultValue="KEYWORD" />
        <argument
            android:name="search_main_tab"
            app:argType="string"
            android:defaultValue="WALLPAPERS" />
        <argument
            android:name="search_query"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="search_color_id"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="search_genre_id"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/wallpaperDetailFragment"
        android:name="com.cute.wallpaper.ringtones.presentation.detail.WallpaperDetailFragment"
        android:label="@string/wallpapers">
        <argument
            android:name="detail_content_id"
            app:argType="string" />
        <argument
            android:name="detail_content_type"
            app:argType="string"
            android:defaultValue="WALLPAPER" />
    </fragment>
</navigation>
