<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/secondary_100"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_wand" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Label12B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_banner_title"
                android:textColor="@color/secondary_800" />

            <TextView
                style="@style/Label10R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/profile_banner_subtitle"
                android:textColor="@color/neutral_500" />
        </LinearLayout>

        <TextView
            android:id="@+id/surpriseButton"
            style="@style/Label10B"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/profile_feed_surprise_button"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/profile_surprise_me"
            android:textColor="@color/primary_500" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
